--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!-- tailwind and daisyui cdn -->
+    <!-- tailwind and daysi cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- fontawsome cdn -->
@@ -19,7 +19,9 @@
           theme: {
             extend: {
               colors: {
-                clifford: '#da373d',
+                "btn-bg" : "rgb(182, 140, 90)",
+                "card-bg" : "rgb(243, 243, 243)",
+                "para-color" : "rgb(112, 112, 112)"
               }
             }
           }
@@ -33,12 +35,108 @@
         .font-2{
             font-family: "EB Garamond", serif;
         }
+        .banner-bg{
+          background-image: url("./images/banner.png");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+        }
     </style>
      
 </head>
 <body>
-    <h1 class="text-4xl">hello world</h1>
-    <button class="btn btn-primary">Hello</button>
-    <i class="fa-solid fa-bars"></i>
+    <!----- header section -------------------------------->
+    <header class="px-5 md:px-10 md:container mx-auto">
+      <!-- nav-section -->
+       <nav class="mt-5">
+          <div class="navbar bg-base-100">
+            <div class="navbar-start">
+              <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M4 6h16M4 12h8m-8 6h16" />
+                  </svg>
+                </div>
+                <ul
+                  tabindex="0"
+                  class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                  <li><a>Home</a></li>
+                <li><a>Services</a></li>
+                <li><a>Cases</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contact Us</a></li>
+                </ul>
+              </div>
+              <a class=""><img src="./images/logo2.png" alt=""></a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-1">
+                <li><a>Home </a></li>
+                <li><a>Services <i class="fa-solid fa-angle-right"></i></a></li>
+                <li><a>Cases <i class="fa-solid fa-angle-right"></i></a></li>
+                <li><a>Blog <i class="fa-solid fa-angle-right"></i></a></li>
+                <li><a>Contact Us <i class="fa-solid fa-angle-right"></i></a></li>
+              </ul>
+            </div>
+            <div class="navbar-end">
+              <a class="btn bg-btn-bg text-white">Free Consultation</a>
+            </div>
+          </div>
+       </nav>
+       <!-- banner section -->
+        <div class="py-20">
+          <div class="hero banner-bg px-10 py-10 md:px-28 md:py-48" >
+              <div class="hero-content text-neutral-content text-center">
+                <div class="">
+                  <h1 class="mb-5 text-4xl font-bold md:text-5xl">We Provide Effective <br> Legal Solutions</h1>
+                  <div class="flex justify-center">
+                    <p class="mb-10 md:w-3/5">
+                      There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                    </p>
+                  </div>
+                  <div class="flex flex-col gap-5 md:flex-row justify-center">
+                    <input type="text" placeholder="Search your services" class="input input-bordered w-full md:max-w-sm" />
+                    <div class="flex justify-center">
+                      <button class="btn text-white font-semibold bg-btn-bg w-1/2 md:w-40">Search</button>
+                    </div>
+                  </div>
+                  
+                </div>
+              </div>
+          </div>
+        </div>
+    </header>
+    <!----- main section -------------------------------->
+    <main>
+      <!-- legal section -->
+       <section class="px-5 md:px-10 md:container mx-auto">
+          <div>
+            <!-- legal text -->
+            <div class="">
+              <h1>The Legal Practice Area</h1>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+            <!-- legal-card -->
+             <div class="">
+
+             </div>
+          </div>
+       </section>
+
+    </main>
+    <!----- footer section -------------------------------->
+    <footer>
+
+    </footer>
 </body>
 </html>
