FAQ Section added

--- a/index.html
+++ b/index.html
@@ -271,7 +271,60 @@
        </section>
        <!---- Question section---------------->
        <section class="px-5 mb-20 md:px-10 md:container mx-auto">
-            
+            <div class="">
+              <!-- question text -->
+               <div class="mb-16">
+                <h1 class="text-4xl text-text-color font-2 font-extrabold text-center mb-6">Frequently Asked Any Questions</h1>
+                <p class="text-base text-para-color text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+               </div>
+               <!-- question banner -->
+                <div class="flex justify-between items-center flex-col gap-10 md:flex-row ">
+                  <!-- Accordion -->
+                  <div class="flex flex-col gap-8  md:w-1/2 md:gap-12">
+
+                    <div class="collapse collapse-plus bg-card-bg">
+                      <input type="radio" name="my-accordion-3" checked="checked" />
+                      <div class="collapse-title text-xl font-medium">Are application fee waivers available?</div>
+                      <div class="collapse-content">
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                      </div>
+                    </div>
+
+                    <div class="collapse collapse-plus bg-card-bg">
+                      <input type="radio" name="my-accordion-3" />
+                      <div class="collapse-title text-xl font-medium">Are application fee waivers available?</div>
+                      <div class="collapse-content">
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                      </div>
+                    </div>
+
+                    <div class="collapse collapse-plus bg-card-bg">
+                      <input type="radio" name="my-accordion-3" />
+                      <div class="collapse-title text-xl font-medium">Are application fee waivers available?</div>
+                      <div class="collapse-content">
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                      </div>
+                    </div>
+
+                    <div class="collapse collapse-plus bg-card-bg">
+                      <input type="radio" name="my-accordion-3" />
+                      <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                      <div class="collapse-content">
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                      </div>
+                    </div>
+
+                  </div>
+                  <!-- image -->
+                   <div class="">
+                    <img class="max-w-full" src="./images/faq.png" alt="">
+                   </div>
+                </div>
+            </div>
+       </section>
+       <!---- contact section---------------->
+       <section class="px-5 mb-20 md:px-10 md:container mx-auto">
+        
        </section>
 
 
