contact section added

--- a/index.html
+++ b/index.html
@@ -324,7 +324,73 @@
        </section>
        <!---- contact section---------------->
        <section class="px-5 mb-20 md:px-10 md:container mx-auto">
-        
+        <div class="">
+          <!-- contact text -->
+           <div class="mb-16">
+            <h1 class="text-4xl text-text-color font-2 font-extrabold text-center mb-6">Contact With Us</h1>
+            <p class="text-base text-para-color text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+           </div>
+           <!-- contact form -->
+            <div class="flex flex-col justify-between items-center gap-10 md:flex-row">
+              <!-- card  -->
+               <div class="grid grid-cols-1 md:grid-cols-2 ">
+                  <!-- card-1 -->
+                   <div class="flex flex-col justify-center items-center border-b-2 border-r-0 p-8 md:p-16 md:border-r-2">
+                    <div class="mb-4">
+                      <img src="./images/location.png" alt="">
+                    </div>
+                    <h3 class="text-2xl font-extrabold font-2 mb-4">Address</h3>
+                    <p class="text-base text-para-color">A108 Adam Street,<br>
+                      New York, NY 535022</p>
+                   </div>
+
+                   <!-- card-2 -->
+                   <div class="flex flex-col justify-center items-center p-8 md:p-16 border-b-2 ">
+                    <div class="mb-4">
+                      <img src="./images/call.png" alt="">
+                    </div>
+                    <h3 class="text-2xl font-extrabold font-2 mb-4">Call Us</h3>
+                    <p class="text-base text-para-color">+88 01750 00 00 00 <br>
+                      +88 01750 00 00 00</p>
+                   </div>
+
+                   <!-- card-3 -->
+                   <div class="flex flex-col justify-center items-center p-8 md:p-16 border-b-2 border-r-0 md:p-16 md:border-r-2 md:border-b-0">
+                    <div class="mb-4">
+                      <img src="./images/email.png" alt="">
+                    </div>
+                    <h3 class="text-2xl font-extrabold font-2 mb-4">Email Us</h3>
+                    <p class="text-base text-para-color">info@gmail.com <br>
+                      info@gmail.com</p>
+                   </div>
+
+                   <!-- card-4 -->
+                   <div class="flex flex-col justify-center items-center p-8 md:p-16 ">
+                    <div class="mb-4">
+                      <img src="./images/time.png" alt="">
+                    </div>
+                    <h3 class="text-2xl font-extrabold font-2 mb-4">Working Hours</h3>
+                    <p class="text-base text-para-color">Mon-Fri: 9AM to 5PM <br>
+                      Sunday: 9AM to 1 PM</p>
+                   </div>
+
+               </div>
+               <!-- form -->
+                <div class="w-full md:w-1/2">
+                  <form action="" class="">
+
+                    <div class="flex flex-col justify-center items-center gap-8 ">
+                      <input type="text" placeholder="Your Name" class="input w-full bg-card-bg p-8 border-none " />
+                      <input type="email" placeholder="Your Email" class="input w-full bg-card-bg p-8 border-none" />
+                      <input type="text" placeholder="Subject" class="input w-full bg-card-bg p-8 border-none" />
+                      <textarea class="textarea textarea-bordered w-full bg-card-bg h-28 border-none" placeholder="Your Message"></textarea>
+                      <button class="btn w-full bg-btn-bg text-xl text-white font-bold ">Send Message</button>
+                    </div>
+
+                  </form>
+                </div>
+            </div>
+        </div>
        </section>
 
 
