footer section Added

--- a/index.html
+++ b/index.html
@@ -396,7 +396,55 @@
 
     </main>
     <!----- footer section -------------------------------->
-    <footer>
+    <footer class="bg-black">
+      <div class="px-5 md:px-10 md:container mx-auto">
+        <div class="footer flex justify-between items-center flex-col bg-black text-white py-10 lg:py-32 lg:flex-row">
+          <nav class="w-full lg:w-3/12">
+            <div class="flex justify-center items-center mb-8 lg:mb-14">
+              <img src="./images/logo.png" alt="" class="">
+            </div>
+            <p class="text-base text-para-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          </nav>
+          <nav class="w-full lg:w-3/12">
+            <h6 class="text-2xl text-white font-2 font-extrabold">Usefull Link</h6>
+            <a class="link link-hover text-para-color ">Homes</a>
+            <a class="link link-hover text-para-color ">About us</a>
+            <a class="link link-hover text-para-color ">Cases</a>
+            <a class="link link-hover text-para-color ">Blog</a>
+            <a class="link link-hover text-para-color ">Contact us</a>
+          </nav>
+          <nav class="w-full lg:w-3/12">
+            <h6 class="text-2xl text-white font-2 font-extrabold">Contact Now</h6>
+            <div class="">
+              <p class="text-para-color">555 4th 5t NW, Washington</p>
+              <p class="text-para-color">DC 20530, United States</p>
+            </div>
+            <div class="">
+              <p class="text-para-color">+88 01750 000 000</p>
+              <p class="text-para-color">+88 01750 000 000</p>
+            </div>
+            <div class="">
+              <p class="text-para-color">info@gmail.com</p>
+              <p class="text-para-color">info@gmail.com</p>
+            </div>
+          </nav>
+          <div class="w-full flex lg:w-3/12">
+            <form>
+              <h6 class="text-2xl text-white font-2 font-extrabold mb-4 lg:mb-10">Subscribe</h6>
+              <p class="text-para-color mb-3 lg:mb-6">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+              <fieldset class="form-control">
+                <div class="join">
+                  <input
+                    type="Email"
+                    placeholder="Email Address"
+                    class="input input-bordered join-item w-full" />
+                  <button class="btn bg-btn-bg join-item"><i class="fa-brands fa-telegram text-white fa-2x"></i></button>
+                </div>
+              </fieldset>
+            </form>
+          </div>
+        </div>
+      </div>
 
     </footer>
 </body>
